feature: import material ui components

--- a/src/app/domains/artwork/features/search/components/search-bar/search-bar.component.html
+++ b/src/app/domains/artwork/features/search/components/search-bar/search-bar.component.html
@@ -1,3 +1,8 @@
 <p>search-bar works!</p>
 
-<input>
+<form class="search-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Favorite food</mat-label>
+      <input matInput placeholder="Ex. Pizza" value="Sushi">
+    </mat-form-field>
+  </form>
