--- a/src/app/domains/artwork/features/search/components/search-table/search-table.component.html
+++ b/src/app/domains/artwork/features/search/components/search-table/search-table.component.html
@@ -1,26 +1,38 @@
-<table mat-table [dataSource]="store.ELEMENT_DATA" class="mat-elevation-z8">
-
+<table
+  mat-table
+  *ngIf="store.artworks$ | async as artworks"
+  [dataSource]="artworks"
+  class="mat-elevation-z8"
+>
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
-  
+
     <!-- Position Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> Id </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
-  
+
     <!-- Name Column -->
     <ng-container matColumnDef="fileName">
       <th mat-header-cell *matHeaderCellDef> File Name </th>
       <td mat-cell *matCellDef="let element"> {{element.fileName}} </td>
     </ng-container>
-  
+
     <!-- Weight Column -->
     <ng-container matColumnDef="createdDate">
       <th mat-header-cell *matHeaderCellDef> Created Date </th>
       <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
     </ng-container>
+    <!-- Weight Column -->
+    <ng-container matColumnDef="fileType">
+      <th mat-header-cell *matHeaderCellDef> File Type </th>
+      <td mat-cell *matCellDef="let element"> {{element.fileType}} </td>
+    </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+
+<div *ngIf="(store.loading$ | async)">Loading...</div>
